--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@ Martin Englund <martin.englund@sun.com>
 Adam Jacob <adam@opscode.com>
 Juri Rischel Jensen <juri@fab-it.dk>
 Gareth Rushgrove <gareth@morethanseven.net>
+Jesse Newland <jesse@jnewland.com>
 
 Portions of cucumber-nagios contain code originally contributed to Chef (http://github.com/opscode/chef)
