R.I.P. Sun Microsystems Inc

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ Contributors
 ------------
 
 Morgan Christiansson <morgan@mog.se>
-Martin Englund <martin.englund@sun.com>
+Martin Englund <martin@englund.nu>
 Adam Jacob <adam@opscode.com>
 Juri Rischel Jensen <juri@fab-it.dk>
 Gareth Rushgrove <gareth@morethanseven.net>
