--- a/AUTHORS
+++ b/AUTHORS
@@ -12,5 +12,6 @@ Adam Jacob <adam@opscode.com>
 Juri Rischel Jensen <juri@fab-it.dk>
 Gareth Rushgrove <gareth@morethanseven.net>
 Jesse Newland <jesse@jnewland.com>
+Luiz Ozaki
 
 Portions of cucumber-nagios contain code originally contributed to Chef (http://github.com/opscode/chef)
