--- a/AUTHORS
+++ b/AUTHORS
@@ -13,5 +13,6 @@ Juri Rischel Jensen <juri@fab-it.dk>
 Gareth Rushgrove <gareth@morethanseven.net>
 Jesse Newland <jesse@jnewland.com>
 Luiz Ozaki
+Dean Wilson <dean.wilson@gmail.com>
 
 Portions of cucumber-nagios contain code originally contributed to Chef (http://github.com/opscode/chef)
