Make step naming consistent

--- a/lib/generators/project/README
+++ b/lib/generators/project/README
@@ -63,7 +63,7 @@ documentation[0], however your tests will look something like this:
       To search for things
 
       Scenario: Searching for things
-        Given I visit "http://www.google.com"
+        When I go to "http://www.google.com"
         When I fill in "q" with "wikipedia"
         And I press "Google Search"
         Then I should see "www.wikipedia.org"
