move cucumber-nagios from generated script onto gem path
	* Rakefile: add cucumber-nagios to executables
	* lib/generators/project/bin/cucumber-nagios -> bin/cucumber-nagios: use cwd, not install path
	* features/installing.feature: use cucumber-nagios from path
	* features/steps/creating_steps.rb: use cucumber-nagios from path
	* features/steps/installing_steps.rb: use cucumber-nagios from path
	* features/steps/using_steps.rb: use cucumber-nagios from path
	* lib/generators/project/README: use cucumber-nagios from path

--- a/lib/generators/project/README
+++ b/lib/generators/project/README
@@ -107,11 +107,11 @@ Running
 
 Invoke the Cucumber feature with the cucumber-nagios script:
 
-    bin/cucumber-nagios features/smh.com.au/smh.feature
+    cucumber-nagios features/smh.com.au/smh.feature
 
 cucumber-nagios can be run from anywhere:
 
-    /path/to/bin/cucumber-nagios /path/to/features/smh/smh.feature
+    cucumber-nagios /path/to/features/smh/smh.feature
 
 It should return a standard Nagios-formatted response string:
 
