Updated list of contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,5 +14,7 @@ Gareth Rushgrove <gareth@morethanseven.net>
 Jesse Newland <jesse@jnewland.com>
 Luiz Ozaki
 Dean Wilson <dean.wilson@gmail.com>
+Hedgehog <hedgehogshiatus@gmail.com>
+Joseph Anthony Pasquale Holsten <joseph@josephholsten.com>
 
 Portions of cucumber-nagios contain code originally contributed to Chef (http://github.com/opscode/chef)
